# Backup-system

./: CMakeLists.txt  MakeFile  README.md  build_project.bat  项目概述.md
include/: CBackup.h  CBackupRecorder.h  CConfig.h  CFactory.h  CRC32.h  CompressFactory.h  EncryptFactory.h  HuffmanCompress.h  ICompress.h  IEncrypt.h  IPack.h  PackFactory.h  SimpleXOREncrypt.h  Utils.h  gui.h  myPack.h  testUtils.h
src/: CBackup.cpp  CBackupRecorder.cpp  CConfig.cpp  CMakeLists.txt  CompressFactory.cpp  EncryptFactory.cpp  HuffmanCompress.cpp  PackFactory.cpp  SimpleXOREncrypt.cpp  Utils.cpp  gui.cpp  main.cpp  myPack.cpp
test/: CMakeLists.txt  test_backup.cpp  test_compress.cpp  test_encrypt.cpp  test_integration.cpp  test_main.cpp  test_pack.cpp  test_recorder.cpp  test_simple.cpp
